# CMake

./: .gitignore
Qt5CMake/: CMakeLists.txt  main.cpp  mainwindow.ui  resources.qrc
TxtMsg2File/: CMakeLists.txt
TxtMsg2File/source/: CMakeLists.txt  main.cpp
TxtMsg2File/source/include/: mainwindow.h
TxtMsg2File/source/src/: CMakeLists.txt  mainwindow.cpp  opeartions.cpp
TxtMsg2File/src/: main.cpp
